# rust-web-starter

./: Cargo.toml  README.md  env.example
src/: main.rs
src/api/: config.rs  database_connection.rs  mod.rs
src/api/controllers/: user.rs
src/api/middleware/: auth.rs  auth2.rs
src/api/model/: user.rs
src/api/services/: user.rs
