[package]
name = "rust-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bson = "2.6.0"
derivative = "2.2.0"
mongodb = "2.4.0"
serde = "1.0.156"
tokio = "1.26.0"
futures = "0.3"
dotenv = "0.15.0"

