[package]
name = "rust-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.0"
derivative = "2.2.0"
mongodb = "2.4.0"
serde = "1.0.156"
serde_json = "1"
tokio = "1.26.0"
futures = "0.3"
dotenv = "0.15.0"
cargo-watch = "8.4.0"
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
futures-util = "0.3.27"
rocket = { version = "0.5.0-rc.2", features=["json"]}


# [dependencies.rocket_dyn_templates]
# features = ["handlebars"]

